python/tests/unit/test_envoy_v3/ratelimitv1test/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "DevPortal": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host-ratelimitv1test\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"ratelimitv1test\"],\"hostname\":\"*\",\"requestPolicy\":{\"insecure\":{\"action\":\"Route\"}},\"selector [...]
                    },
                    "creationTimestamp": "2020-12-23T17:00:51Z",
                    "generation": 2,
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host-ratelimitv1test",
                    "namespace": "default",
                    "resourceVersion": "18094",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/hosts/cleartext-host-ratelimitv1test",
                    "uid": "b9ae3bf3-6dfe-4238-8332-c95ef84e3ecf"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "ratelimitv1test"
                    ],
                    "hostname": "*",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "ratelimitv1test"
                        }
                    },
                    "tlsSecret": {}
                },
                "status": {
                    "state": "Ready",
                    "tlsCertificateSource": "None"
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdmanualcontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdmanualcontext-manual-host-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdmanualcontext\"],\"hosts\":[\"hostcrdmanualcontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secr [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:40Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdmanualcontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdmanualcontext-manual-host-context",
                    "namespace": "default",
                    "resourceVersion": "2949",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/hostcrdmanualcontext-manual-host-context",
                    "uid": "fa19bc5d-236f-46f9-b1f1-0c10c8b2ed3f"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdmanualcontext"
                    ],
                    "hosts": [
                        "hostcrdmanualcontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdmanualcontext-manual-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdseparatetlscontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdseparatetlscontext-separate-tls-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdseparatetlscontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secret\":\"hostcrdseparat [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:41Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdseparatetlscontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdseparatetlscontext-separate-tls-context",
                    "namespace": "default",
                    "resourceVersion": "2995",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/hostcrdseparatetlscontext-separate-tls-context",
                    "uid": "e10bdb3b-8605-4f27-8943-5767c5e99f8b"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdseparatetlscontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdseparatetlscontext-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlsinheritfrommodule\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlsinheritfrommodule\",\"namespace\":\"default\"},\"spec\":{\"alpn_protocols\":\"h2,http/1.1\",\"ambassador_id\":[\"tlsinheritfrommodule\"],\"hosts\":[\"a.domain.com\"],\"secret\":\"tlsinheritfrommodule\"}}\n"
                    },
                    "creationTimestamp": "2020-12-23T17:01:08Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "tlsinheritfrommodule",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlsinheritfrommodule",
                    "namespace": "default",
                    "resourceVersion": "6438",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/tlsinheritfrommodule",
                    "uid": "d4f4da8f-82b8-4c31-b484-3effd73b669f"
                },
                "spec": {
                    "alpn_protocols": "h2,http/1.1",
                    "ambassador_id": [
                        "tlsinheritfrommodule"
                    ],
                    "hosts": [
                        "a.domain.com"
                    ],
                    "secret": "tlsinheritfrommodule"
                }
            }
        ],
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: getambassador.io/v2\nkind: RateLimitService\nname: ratelimitv1test-rlsgrpc\nservice: \"ratelimitv1test-rlsgrpc\"\ntimeout_ms: 500\nambassador_id: ratelimitv1test\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: getambassador.io/v2\\nkind: RateLimitService\\nname: ratelimitv1test-rlsgrpc\\nservice: \\\"ratelimitv1test-rlsgrpc\\\"\\ntimeout_ms: 500\\nambassador_id: ratelimitv1test\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"Am [...]
                    },
                    "creationTimestamp": "2020-12-23T20:39:59Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv1test",
                    "namespace": "default",
                    "resourceVersion": "297928",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test",
                    "uid": "e9f90338-d14c-4998-8e32-255a0388fc10"
                },
                "spec": {
                    "clusterIP": "10.43.185.122",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31022,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32150,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "ratelimitv1test"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"AmbassadorTest\",\"service\":\"ratelimitv1test-admin\"},\"name\":\"ratelimitv1test-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"ratelimitv1test-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"ratelimitv1test\"},\"type\":\"NodePort\"} [...]
                    },
                    "creationTimestamp": "2020-12-23T20:39:59Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest",
                        "service": "ratelimitv1test-admin"
                    },
                    "name": "ratelimitv1test-admin",
                    "namespace": "default",
                    "resourceVersion": "297938",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test-admin",
                    "uid": "ed1e5cec-c285-4474-9e49-40a1baaa57df"
                },
                "spec": {
                    "clusterIP": "10.43.181.97",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "ratelimitv1test-admin",
                            "nodePort": 30902,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "ratelimitv1test"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: getambassador.io/v2\nkind: Mapping\nname: ratelimit_target_mapping\nprefix: /target/\nservice: ratelimitv1test-http\nlabels:\n  ambassador:\n  - request_label_group:\n    - x-ambassador-test-allow:\n        header: \"x-ambassador-test-allow\"\n        omit_if_not_present: true\n    - x-ambassador-test-headers-append:\n        header: \"x-ambassador-test-headers-append\"\n        omit_if_not_present: true\nambassador_id: ratelim [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: getambassador.io/v2\\nkind: Mapping\\nname: ratelimit_target_mapping\\nprefix: /target/\\nservice: ratelimitv1test-http\\nlabels:\\n  ambassador:\\n  - request_label_group:\\n    - x-ambassador-test-allow:\\n        header: \\\"x-ambassador-test-allow\\\"\\n        omit_if_not_present: true\\n    -  [...]
                    },
                    "creationTimestamp": "2020-12-23T20:39:59Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv1test-http",
                    "namespace": "default",
                    "resourceVersion": "297965",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test-http",
                    "uid": "25c9bf2a-d75b-4929-9bd7-104f946ad901"
                },
                "spec": {
                    "clusterIP": "10.43.196.94",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8134
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8497
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"AmbassadorTest\"},\"name\":\"ratelimitv1test-rlsgrpc\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selector\":{\"backend\":\" [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:00Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv1test-rlsgrpc",
                    "namespace": "default",
                    "resourceVersion": "297975",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test-rlsgrpc",
                    "uid": "56847d34-da15-4640-a503-f89667b3de83"
                },
                "spec": {
                    "clusterIP": "10.43.25.67",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "ratelimitv1test-rlsgrpc"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
